--- a/app/src/main/res/layout/activity_learn_materiala.xml
+++ b/app/src/main/res/layout/activity_learn_materiala.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/iv_learn_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/back2_light"/>
@@ -23,6 +24,12 @@
             android:layout_height="wrap_content" />
 
     </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/between_line">
+    </View>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/sf_learn"
