--- a/app/src/main/res/layout/imageview_show.xml
+++ b/app/src/main/res/layout/imageview_show.xml
@@ -36,10 +36,11 @@
         android:background="@drawable/listening_play_green"/>
 
     <ImageView
+        android:layout_marginTop="20dp"
         android:layout_below="@+id/id_chinese"
         android:id="@+id/id_imageview_show2"
         android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="200dp"
+        android:layout_height="150dp" />
 
 </RelativeLayout>
