--- a/app/src/main/res/menu/tab_menu.xml
+++ b/app/src/main/res/menu/tab_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/one_rt" android:icon="@drawable/nav_home_normal" android:title="首页"></item>
+    <item android:id="@+id/new_rt" android:icon="@drawable/study" android:title="学习"></item>
     <item android:id="@+id/two_rt" android:icon="@drawable/nav_order_normal" android:title="分类"></item>
     <item android:id="@+id/three_rt" android:icon="@drawable/nav_me_normal" android:title="我的"></item>
 </menu>
