--- a/app/src/main/res/layout/learn_mater_list.xml
+++ b/app/src/main/res/layout/learn_mater_list.xml
@@ -48,6 +48,7 @@
         android:background="@drawable/calendar"/>
 
     <TextView
+        android:id="@+id/tv_calendar"
         android:layout_marginTop="12dp"
         android:layout_marginLeft="15dp"
         android:layout_below="@+id/tv_xiang"
