--- a/app/src/main/res/layout/activity_hover.xml
+++ b/app/src/main/res/layout/activity_hover.xml
@@ -130,7 +130,7 @@
             </RelativeLayout>
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerview"
+                android:id="@+id/ho_recyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#fafafa">
