--- a/app/src/main/res/layout/activity_hover.xml
+++ b/app/src/main/res/layout/activity_hover.xml
@@ -11,6 +11,7 @@
         android:background="@android:color/white">
 
         <ImageView
+            android:layout_marginLeft="10dp"
             android:id="@+id/iv_hover_black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -31,6 +32,7 @@
     </View>
 
     <com.example.haoji.phoneticsymbol.type.widget.MyScrollView
+        android:layout_marginTop="10dp"
         android:id="@+id/view_hover"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -83,7 +85,7 @@
                     android:layout_marginTop="30dp"
                     android:layout_toRightOf="@+id/id_add_study"
                     android:background="@drawable/selector_pay"
-                    android:text="购买书籍"
+                    android:text="批量下载"
                     android:textColor="@android:color/white" />
 
             </RelativeLayout>
