--- a/app/src/main/res/layout/me_list.xml
+++ b/app/src/main/res/layout/me_list.xml
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12sp"
+        android:textColor="#393939"
         android:text="VIP专区"/>
 
 </LinearLayout>
